# CryptoTerminal

./: .gitignore  CMakeLists.txt
cmake/: astyle.cmake  cppcheck.cmake
include/utilities/: definitions.h  logger.hpp  logger_impl.hpp  requester.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  logger.cpp  main.cpp  requester.cpp
utilities/: .astylerc
